jvimalprasathdev/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Channel_Sources__c</fullName>
        <label>Channel Sources</label>
        <picklist>
            <picklistValues>
                <fullName>Affiliates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaigns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Parties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Values__c</fullName>
        <label>Channel Values</label>
        <picklist>
            <controllingField>Channel_Sources__c</controllingField>
            <picklistValues>
                <fullName>Bankrate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCFR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RB Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yahoo/Bing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Campaign Mortgage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Campaign Home Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-sell Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail MC Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapitalOne.com Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CapitalOne.com Web</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attorney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Realtors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Advisors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retention - Previous Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm Transfer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <picklist>
            <picklistValues>
                <fullName>Centralized Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Equity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighborhood Lending</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.NUM_RESPONSES</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <sharingModel>FullAccess</sharingModel>
</CustomObject>